cabal-version:      3.6
name:               hstream-admin-server
version:            0.1.0.0
synopsis:
  High performance stream processing platform for IoT data written in Haskell.

description:
  Please see the README on GitHub at
  <https://github.com/hstreamdb/hstream#readme>

license:            BSD-3-Clause
license-file:       LICENSE
copyright:          Copyright (c) 2020 EMQ Technologies Co., Ltd.
author:             lambda@emqx.io
maintainer:         lambda@emqx.io
tested-with:        GHC ==8.10.7
category:           Database
homepage:           https://github.com/hstreamdb/hstream
bug-reports:        https://github.com/hstreamdb/hstream/issues
build-type:         Simple
extra-source-files: LICENSE
extra-source-files: cbits/**/*.h

source-repository head
  type:     git
  location: https://github.com/hstreamdb/hstream

flag ReleaseBuild
  default:     False
  description:
    Enables all optimisations, leads to slower build time and better performance

common shared-properties
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

  if flag(releasebuild)
    ghc-options:
      -feager-blackholing -flate-dmd-anal -flate-specialise
      -fspec-constr-keen -fstatic-argument-transformation
      -funbox-strict-fields -O2

library
  import:             shared-properties
  hs-source-dirs:     .
  cxx-sources:
    cbits/hs_query.cpp
    cbits/query/Query.cpp

  exposed-modules:
    HStream.Admin.Server.Command
    HStream.Admin.Server.Types

  other-modules:      HStream.Admin.Server.Command.ServerSql
  include-dirs:       . /usr/local/include
  extra-lib-dirs:     /usr/local/lib
  extra-libraries:
    stdc++
    logdevice
    ldquery

  cxx-options:        -std=c++17 -Werror=switch
  hsc2hs-options:
    "--cc=g++" "--lflag=-lstdc++" "--cflag=-D__HSC2HS__=1"
    "--cflag=-std=c++17"

  build-tool-depends:
    , cpphs:cpphs    >=1.20 && <1.21
    , hsc2hs:hsc2hs

  build-depends:
    , aeson
    , aeson-pretty
    , ansi-wl-pprint        >=0.6.9     && <1
    , base                  >=4.11.1    && <5
    , bytestring
    , casing                ^>=0.1
    , colourista            ^>=0.1.0.1
    , containers
    , data-default
    , deepseq
    , grpc-haskell
    , grpc-haskell-core
    , hashable              >=1.2.7.0   && <1.4
    , haskeline             ^>=0.8.1
    , hstream-api-hs
    , hstream-common
    , hstream-common-base
    , network               ^>=3.1.2
    , optparse-applicative  ^>=0.16
    , proto3-suite
    , table-layout          ^>=0.9.1
    , text                  ^>=1.2.3.0
    , time
    , transformers          ^>=0.5.5.0
    , unordered-containers  ^>=0.2.9.0
    , vector                ^>=0.12.0.1
    , Z-Data

  default-language:   Haskell2010
  default-extensions:
    DeriveGeneric
    DerivingStrategies
    EmptyDataDeriving
    FlexibleContexts
    GADTSyntax
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    UnliftedFFITypes
